new demo added for thorough testing